--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,9 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.android.material:material:1.4.+'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0' // for bar-chart
 }
