--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.android.material:material:1.4.+'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    testImplementation 'junit:junit:4.12'
+    testImplementation'junit:junit:4.13'
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0' // for bar-chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.3'
+    testImplementation "org.mockito:mockito-core:3.+"
 }
