--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.0.3'
     testImplementation "org.mockito:mockito-core:3.+"
+    implementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.1'
 }
