--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
             android:name=".presentation.StartWorkoutActivity"
             android:exported="false" />
         <activity
+            android:name=".presentation.UploadProgressActivity"
+            android:exported="false" />
+        <activity
             android:name=".presentation.AddRoutineActivity"
             android:exported="false" />
         <activity
