--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:label="graph">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="comp3350.srsys.presentation.HomeActivity" />
+                android:value="comp3350.superset.presentation.HomeActivity" />
         </activity>
     </application>
 
